tests/errors/_questions/generated_errors/not_int_in_stanfunc/float_argument.c
int main() 
{	
	send_int_to_robot(1.1);
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}